--- a/public/styles.css
+++ b/public/styles.css
@@ -14,6 +14,10 @@ nav {
 .logo {
   color: blueviolet;
   font-size: 40px;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
 }
 input[type="text"] {
   border-radius: 30px;
