Fixed categories to have their proper title and to have their own page

--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -20,7 +20,6 @@ nav.categories
   .category-container
     ul.category-links
       li: a(href="/products") Products
-      li: a(href="/cats") Cats
-      li: a(href="/toys") Toys
-      li: a(href="/accessories") Accessories
-
+      li: a(href="/products?category=Cats") Cats
+      li: a(href="/products?category=Toys") Toys
+      li: a(href="/products?category=Accessories") Accessories
