--- a/views/admin_products.pug
+++ b/views/admin_products.pug
@@ -7,7 +7,13 @@ block content
     input(name="description", placeholder="Description", required)
     input(name="price", type="number", step="0.01", placeholder="Price", required)
     input(name="image", placeholder="Image URL", required)
-    input(name="category", placeholder="Category", required)
+    
+    // dropdown
+    select(name="category", required)
+      option(value="") Select a category
+      each cat in categories
+        option(value=cat)= cat
+
     button(type="submit") Add Product
 
   hr
