--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
   head
+    script(src="/js/script.js", defer)
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title berrybag
