--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -11,11 +11,11 @@ nav.navbar
 
     if user
       li
-        a(href="/profile") Profile
+        a(href="/auth/profile") Profile
         a(href="/auth/logout") Logout
     else
       li
-        a(href="/signin") Sign in
+        a(href="/auth/signin") Sign in
 
 nav.categories
   .category-container
