--- a/views/signin.pug
+++ b/views/signin.pug
@@ -5,9 +5,9 @@ block content
     h2 Sign In
     if error
       p(style="color: red")= error
-    form(method="POST", action="/auth/login")
+    form(method="POST", action="/auth/signin")
       input(type="email", name="email", placeholder="Email", required)
       input(type="password", name="password", placeholder="Password", required)
       button(type="submit") Sign In
     p Don't have an account?
-    a(href="/register") Register here
+    a(href="/auth/register") Register here
