fixed profiles and fixed cart tracking

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,6 @@
 doctype html
 html(lang="en")
   head
-    script(src="/js/script.js", defer)
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title berrybag
@@ -15,4 +14,7 @@ html(lang="en")
       block content
 
     footer
-      p(style="text-align: center; color: gray; margin-top: 40px") © 2025 berrybag.
+      p(style="text-align: center; color: gray; margin-top: 40px")
+        | © 2025 berrybag. |
+        a(href="/about") About Us |
+        a(href="/faq") FAQ
