Made search functional

--- a/views/products.pug
+++ b/views/products.pug
@@ -4,15 +4,19 @@ block content
   div.alert-container
 
   h2.section-title #{title || 'Products'}
-  .product-grid
-    each product in products
-      .product-card
-        a(href=`/products/${product.id}`)
-          img(src=product.image, alt=product.name)
-        h3
-          a(href=`/products/${product.id}`, style="text-decoration: none; color: inherit")
-            = product.name
-        p.description= product.description
-        p.price $#{product.price.toFixed(2)}
-        form(class="cart-form", data-id=product.id)
-          button(type="submit") Add to Cart
+
+  if products.length
+    .product-grid
+      each product in products
+        .product-card
+          a(href=`/products/${product.id}`)
+            img(src=product.image, alt=product.name)
+          h3
+            a(href=`/products/${product.id}`, style="text-decoration: none; color: inherit")
+              = product.name
+          p.description= product.description
+          p.price $#{product.price.toFixed(2)}
+          form(class="cart-form", data-id=product.id)
+            button(type="submit") Add to Cart
+  else
+    p(style="text-align: center; margin-top: 30px") No products found.
