--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -12,7 +12,15 @@ nav.navbar
     if user
       li
         a(href="/auth/profile") Profile
+      li
         a(href="/auth/logout") Logout
+
+      if user.is_admin
+        li
+          a(href="/admin/products") Manage Products
+        li
+          a(href="/admin/users") Manage Users
+
     else
       li
         a(href="/auth/signin") Sign in
