fixed footer fixed admin and fixed mobile responsive (#25)

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,6 @@ html(lang="en")
       block content
 
     footer
-      p(style="text-align: center; color: gray; margin-top: 40px")
-        | © 2025 berrybag. |
+      p © 2025 berrybag. |
         a(href="/about") About Us |
-        a(href="/faq") FAQ
+        a(href="/faq") FAQ 
